<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter Client</string>
    <string name="login_label">Log in</string>
    <string name="title_activity_timeline">Home</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="profile_image">profile image</string>
    <string name="favourite_icon">favourite icon</string>
    <string name="screen_name">screen name</string>
    <string name="tweet_since">tweet since</string>
    <string name="tweet_desc">description</string>
    <string name="user_name">user name</string>
    <string name="title_activity_tweet"></string>
    <string name="composeTweet">Compose</string>
    <string name="saveTweet">Tweet</string>
    <string name="default_tweet_msg">What\'s happening ?</string>
    <string name="cancelTweet">Cancel</string>
    <string name="authenticated">Authenticated</string>
    <string name="maxTweetChars">Reach Maximum Characters Allowed</string>
    <string name="icProfile">Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="defaultTagLine">TagLine</string>

</resources>