<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profileImageUrl"
        android:minWidth="50dp"
        android:maxWidth="50dp"
        android:maxHeight="50dp"
        android:contentDescription="@string/profile_image"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/user_name"
        android:id="@+id/userName"
        android:layout_toRightOf="@+id/profileImageUrl"
        android:layout_toEndOf="@+id/profileImageUrl"
        android:paddingRight="2dp"
        android:paddingLeft="2dp"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/screen_name"
        android:id="@+id/screenName"
        android:layout_alignBottom="@+id/userName"
        android:layout_toRightOf="@+id/userName"
        android:layout_toEndOf="@+id/userName"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tweet_since"
        android:id="@+id/tweetSince"
        android:layout_alignBottom="@+id/screenName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tweet_desc"
        android:id="@+id/tweetDescription"
        android:layout_below="@+id/userName"
        android:layout_alignLeft="@+id/userName"
        android:layout_alignStart="@+id/userName" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/favoriteIcon"
        android:contentDescription="@string/favourite_icon"
        android:src="@drawable/favourite_small_star"
        android:paddingRight="2dp"
        android:layout_below="@+id/tweetDescription"
        android:layout_alignLeft="@+id/tweetDescription"
        android:layout_alignStart="@+id/tweetDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/favoriteCount"
        android:layout_alignTop="@+id/favoriteIcon"
        android:layout_toRightOf="@+id/favoriteIcon"
        android:layout_alignBottom="@+id/favoriteIcon"
        />
</RelativeLayout>