<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context="com.codepath.apps.restclienttemplate.activities.ProfileActivity">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="5dp"
        android:id="@+id/rtHeader">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivProfileImage"
            android:minWidth="75dp"
            android:minHeight="75dp"
            android:maxWidth="50dp"
            android:maxHeight="50dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/profile_image"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/user_name"
            android:id="@+id/tvUserName"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:layout_toEndOf="@+id/ivProfileImage"
            android:paddingRight="2dp"
            android:paddingLeft="2dp"
            android:textSize="16sp"
            android:layout_alignParentTop="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/defaultTagLine"
            android:id="@+id/tagLine"
            android:textSize="15sp"
            android:layout_below="@+id/tvUserName"
            android:layout_alignLeft="@+id/tvUserName"
            android:layout_alignStart="@+id/tvUserName" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/llCounts"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:background="#ffc9f2ff"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/rtHeader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="tweet count"
            android:layout_marginLeft="5dp"
            android:textColor="@color/actionbar_background"
            android:id="@+id/tvTweetCount" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="followers"
            android:layout_marginLeft="10dp"
            android:textColor="@color/actionbar_background"
            android:id="@+id/tvFollowers" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="following"
            android:layout_marginLeft="10dp"
            android:textColor="@color/actionbar_background"
            android:id="@+id/tvFollowing" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/flContainer"
        android:layout_below="@+id/llCounts"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"></FrameLayout>
</RelativeLayout>
